# rust-android-bindings

./: Cargo.toml  README.md  build.rs  index.html
.github/workflows/: ci.yaml  docs.yaml
.vim-lsp-settings/: settings.json
examples/: simple.rs
src/: lib.rs
