[package]
name = "android-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "simple"
crate-type = ["cdylib"]

#[lib]
#crate_type = ["cdylib"]

[build-dependencies]
jaffi = { version = "0.2.0" }
zip = "2.1.3"

[target.'cfg(target_os = "android")'.dependencies]
jaffi_support = { version = "0.2.0" }

[target.'cfg(target_os = "android")'.dev-dependencies]
jni = "0.20"
log = "0.4.14"
ndk = { version = "0.9", features = ["api-level-31"] }
ndk-context = "0.1.1"
android_logger = "0.13.3"
android-activity = { version = "0.5.2", features = ["native-activity"] }
libc = "0.2"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 33

[patch.crates-io]
jaffi = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
jaffi_support = { git = "https://github.com/simlay/jaffi.git", branch = "android-bindings" }
